style(merlin-www-show-season-hub): padding top on large image to prevent label from jumping

--- a/packages/merlin-www-show-season-hub/sass/wireframe/wireframe.scss
+++ b/packages/merlin-www-show-season-hub/sass/wireframe/wireframe.scss
@@ -49,9 +49,15 @@
 }
 .sh-season-hub-viewer__featured__image {
     position: relative;
+    padding-top: 150%;
 
     img {
-        max-width: 400px;
+        bottom: 0;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
         width: 100%;
     }
 }
